# openenv_sre_arbiter

./: Dockerfile  README.md  data.json  environment.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActionConsole.tsx  HeaderBar.tsx  IncidentFeed.tsx  TelemetryGrid.tsx
frontend/src/hooks/: useArbiter.ts
server/: app.py  data.json
sre-dashboard/: package-lock.json  package.json  vite.config.ts
sre-dashboard/src/: index.css
sre-dashboard/src/api/: client.ts
sre-dashboard/src/components/: ActionConsole.tsx  DashboardLayout.tsx  EmptyState.tsx  Header.tsx  HealthHeatmap.tsx  IncidentFeed.tsx  ScenarioInjector.tsx  TelemetryGrid.tsx
sre-dashboard/src/hooks/: useEpisode.ts
sre-dashboard/src/types/: sre.ts
sre_frontend_dist/: index.html
sre_frontend_dist/assets/: index-6hP2OA7w.js  index-B9bgUubm.js  index-BT1xTLzU.css  index-BXigT_1l.css  index-CwTnIsnU.css  index-D8K7Jkh9.js  index-DD-eHF41.css  index-DHQGlC4p.js  index-DX5vZYuH.js
